Autorización con tokens de Gmail, Facebook e integración con Backend FR 05/Nov/2020
